# turtletrack_ws

./: README.md  path_planning
trajectory_controller/: CMakeLists.txt  package.xml
trajectory_controller/config/: waypoints.yaml
trajectory_controller/launch/: trajectory_follow.launch.py
trajectory_controller/scripts/: path_smoother.py  smoothed_path_visualizer.py  trajectory_controller.py  trajectory_generation.py
turtlebot3/: CMakeLists.txt  package.xml
turtlebot3/launch/: simulation.launch.py
